--- a/mavenproject1/.classpath
+++ b/mavenproject1/.classpath
@@ -18,7 +18,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/home/matheus/commons-net-3.7.2/commons-net-3.7.2.jar">
+	<classpathentry kind="lib" path="/home/matheus/commons-net-3.7.2/commons-net-3.7.2.jar" sourcepath="/home/matheus/commons-net-3.7.2/commons-net-3.7.2-sources.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
